# hpc2torch

./: CMakeLists.txt  README.md  run.sh
cmake/: common.cmake  source_ascend.cmake  source_cambricon.cmake  source_kunlun.cmake  source_nvidia.cmake  source_ql.cmake  source_teco.cmake
include/dlpack/: dlpack.h
include/gpu/: common_gpu.h
include/kunlun/: binary_kunlun.h  common_kernel_kunlun.h  common_kunlun.h  reduce_kunlun.h  sort_kunlun.h
src/attention/gpu/: attention_cuda.cu
src/awq_marlin_gemm/core/: scalar_type.hpp  utils.h
src/awq_marlin_gemm/gpu/: awq_marlin_gemm_cuda.cu  generate_kernels.py  kernel.cuh
src/awq_marlin_gemm/marlin/: awq_marlin_repack.cu  gptq_marlin_repack.cu  kernel.h  marlin.cuh  marlin_dtypes.cuh  marlin_template.h
src/awq_marlin_repack/gpu/: awq_marlin_repack_cuda.cu  kernel.cuh
src/binary/gpu/: binary_cudnn.cpp
src/convolution/gpu/: convolution_cudnn.cpp
src/convolution/kunlun/: convolution_kunlun.cpp
src/convolution/mlu/: convolution_cnnl.cpp
src/convolution/npu/: convolution_aclnn.cpp
src/dequant/per_tensor_dequant_fp8/gpu/: per_tensor_dequant_fp8_cuda.cu
src/dequant/per_token_dequant_fp8/gpu/: per_token_dequant_fp8_cuda.cu
src/gemm/gpu/: gemm_cutlass.cu
src/gptq_gemm/gpu/: gptq_gemm_cuda.cu  kernel.cuh
src/gptq_gemm/utils/: compat.cuh  my_operator.cpp  qdq_util.cuh
src/gptq_marlin_gemm/gpu/: gptq_marlin_gemm_cuda.cu
src/gptq_marlin_gemm/marlin/: awq_marlin_repack.cuh  gptq_marlin.cuh  gptq_marlin_repack.cuh  kernel.h  marlin.cuh  marlin_dtypes.cuh  marlin_template.h
src/gptq_marlin_gemm/sgl_kernel/: scalar_type.hpp
src/gptq_marlin_repack/gpu/: gptq_marlin_repack_cuda.cu  kernel.cuh
src/gptq_marlin_repack/marlin/: marlin.cuh
src/layernorm/gpu/: layernorm_cuda.cu
src/linear/gpu/: linear_cuda.cu
src/lp_norm/gpu/: lp_norm_cuda.cu
src/marlin_int4_fp8_preprocess/core/: source_location.h  utils.h
src/marlin_int4_fp8_preprocess/gpu/: marlin.cuh  marlin_int4_fp8_preprocess_cuda.cu
src/matmul/gpu/: matmul_cuda.cu  matmul_cudnn.cpp
src/matmul/mlu/: matmul_cnnl.cpp
src/moe_align_block_size/gpu/: kernel.cuh  moe_align_block_size_cuda.cu
src/quant/: nvfp4_quant.cuh  utils.h
src/quant/gpu/: quant_cuda.cu
src/quant/per_channel_quant_int8/gpu/: kernel.cuh  per_channel_quant_int8_cuda.cu
src/quant/per_group_quant_fp4/gpu/: kernel.cuh  per_group_quant_fp4_cuda.cu
src/quant/per_tensor_quant_fp8/gpu/: kernel.cuh  per_tensor_quant_fp8_cuda.cu
src/quant/per_tensor_quant_int8/gpu/: kernel.cuh  per_tensor_quant_int8_cuda.cu
src/quant/per_token_quant_fp8/gpu/: kernel.cuh  per_token_quant_fp8_cuda.cu
src/quantize_gptq/gpu/: gptq_marlin.cu  quantize_gptq_cuda.cu
src/random_sample/kunlun/: random_sample_kunlun.xpu
src/resize/mlu/: resize_cnnl.cpp
src/resize/npu/: resize_aclnn.cpp
src/rms_norm/mlu/: rms_norm_bang.mlu
src/rotary_embedding/kunlun/: rotary_embedding_kunlun.xpu
src/scaled_mm/gpu/: epilogue_per_row_per_col_scale.h  gemm_universal_base_compat.h  gemm_with_epilogue_visitor.h  int8_gemm_kernel.cuh  per_channel_dequant_int8.cuh  scaled_mm_cutlass.cu
src/sglang_moe_wna16_marlin_gemm/gpu/: kernel.cuh  sglang_moe_wna16_marlin_gemm_cuda.cu
src/sglang_moe_wna16_marlin_gemm/marlin/: dequant.h  kernel.h  marlin.cuh  marlin_dtypes.cuh  marlin_template.h
src/sglang_moe_wna16_marlin_gemm/sgl_kernel/: source_location.h  utils.cuh
src/softmax/cpu/: softmax.cpp  softmax_cpu.cpp
src/softmax/gpu/: softmax_cuda.cu  softmax_cudnn.cpp
src/softmax/mlu/: softmax_bang.mlu  softmax_cnnl.cpp
src/softmax/npu/: softmax_aclnn.cpp
src/vllm_moe_wna16_marlin_gemm/gpu/: generate_kernels.py  kernel.cuh  vllm_moe_wna16_marlin_gemm_cuda.cu
src/vllm_moe_wna16_marlin_gemm/marlin/: kernel.h  marlin_template.h
src/w4a16/gpu/: w4a16_cuda.cu
src/w4a16/sgl_kernel/: tensor.h  utils.h
test/: attention.py  awq_marlin_gemm.py  awq_marlin_repack.py  batchnorm.py  binary.py  causal_softmax.py  clip.py  concat.py  convTranspose.py  convolution.py  expand.py  extend.py  gather.py  gatherElements.py  gemm.py  gptq_gemm.py  gptq_marlin_gemm.py  gptq_marlin_repack.py  layernorm.py  lp_norm.py  marlin_int4_fp8_preprocess.py  matmul.py  moe_align_block_size.py  moe_wna16_marlin_gemm.py  pad.py  per_channel_quant_int8.py  per_group_quant_fp4.py  per_tensor_dequant_fp8.py  per_tensor_quant_fp8.py  per_tensor_quant_int8.py  per_token_dequant_fp8.py  per_token_quant_fp8.py  pooling.py  quant_linear.py  quantize_gptq.py  random_sample.py  reduce.py  resize.py  rms_norm.py  rmsnorm.py  (+9 more)
test/utils/: scalar_type.py
